--- a/assets/examples/add_event_listener.html
+++ b/assets/examples/add_event_listener.html
@@ -26,7 +26,9 @@
 
       function triggerAddEventListenerTest(){
         container = document.querySelector('#container');
-        for(var i=0; i < 1000000; i++){
+        amt = document.querySelector('#amount');
+        val = parseInt(amt.value);
+        for(var i=0; i < val; i++){
           (function(button_number){
             var btn = document.createElement('div');
             btn.innerHTML = "button number " + button_number;
