adding config var

--- a/assets/examples/add_event_listener.html
+++ b/assets/examples/add_event_listener.html
@@ -16,7 +16,7 @@
     <label>Size of experiement</label>
     <input type="name" id="amount" placeholder="100000" />
     <br/><br/>
-    <button id="trigger_add_event_listener" onclick="triggerAddEventListenerTest">
+    <button id="trigger_add_event_listener" on-click="triggerAddEventListenerTest">
       Trigger Add Event Listener Lots of buttons
     </button>
 
