--- a/assets/examples/add_event_listener.html
+++ b/assets/examples/add_event_listener.html
@@ -16,15 +16,15 @@
     <label>Size of experiement</label>
     <input type="name" id="amount" placeholder="100000" />
     <br/><br/>
-    <button id="trigger_add_event_listener" on-click="triggerAddEventListenerTest">
+    <button id="trigger_add_event_listener">
       Trigger Add Event Listener Lots of buttons
     </button>
 
     <div id="container"></div>
 
     <script>
-
       function triggerAddEventListenerTest(){
+        
         container = document.querySelector('#container');
         amt = document.querySelector('#amount');
         val = parseInt(amt.value);
@@ -40,6 +40,9 @@
           })(i);
         }
       }
+
+      add_event_listener_button = document.querySelector('#trigger_add_event_listener');
+      add_event_listener_button.addEventListener('click', triggerAddEventListenerTest);
 
     </script>
 
