getting this third example working

--- a/assets/examples/add_event_listener.html
+++ b/assets/examples/add_event_listener.html
@@ -97,6 +97,7 @@
             console.log('end click function ' + time.toString());
         });
 
+        container.appendChild(btn);
       }
 
       add_event_listener_button = document.querySelector('#trigger_add_event_listener');
