--- a/assets/examples/add_event_listener.html
+++ b/assets/examples/add_event_listener.html
@@ -17,7 +17,7 @@
     <input type="text" id="btn_amount" placeholder="100000" />
     <br/><br/>
     <label>Number of Events Per Button</label>
-    <input type="text" id"event_amount" placeholder="10">
+    <input type="text" id="event_amount" placeholder="10">
     <br/>
     <label>Delegated</label>
     <br/>
