--- a/assets/examples/add_event_listener.html
+++ b/assets/examples/add_event_listener.html
@@ -70,7 +70,7 @@
                       
                      })(j, button_number);
                   }
-
+                  container.appendChild(btn);
                  })(i);
 
               }
